# raygun

./: .gitignore  CMakeLists.txt  Fade.cpp  Fade.h  Fade.hpp  README.md  RayGun.hpp  Switch.cpp  Switch.h  Switch.hpp  Util.h  main.ino  raygun-master.ino
libraries/Fade/: Fade.cpp  Fade.h
test/: Arduino_mock.c  Arduino_mock.h  SwitchTests.cpp  SwitchTests.h
